// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocaleController localizing time zone options should append localized time zone labels to the options 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  data-w-locale-server-time-zone-param="Europe/London"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone: GMT [en-US] (Greenwich Mean Time [en-US])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: GMT [en-US] (Greenwich Mean Time [en-US])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: GMT-3 [en-US] (Argentina Standard Time [en-US])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: CST [en-US] (Central Standard Time [en-US])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: GMT-3 [en-US] (Rothera Time [en-US])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: GMT+1 [en-US] (Central European Standard Time [en-US])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: GMT+5:45 [en-US] (Nepal Time [en-US])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: GMT [en-US] (Western European Standard Time [en-US])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: GMT+10:30 [en-US] (Australian Central Daylight Time [en-US])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: GMT-3 [en-US] (Brasilia Standard Time [en-US])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: AST [en-US] (Atlantic Standard Time [en-US])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: GMT-3 [en-US] (Chile Summer Time [en-US])
  </option>
  
      
  <option
    value="EST"
  >
    EST: EST [en-US] (Eastern Standard Time [en-US])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: GMT+7 [en-US] (GMT+07:00 [en-US])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: GMT+1 [en-US] (Central European Standard Time [en-US])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: UTC [en-US] (Coordinated Universal Time [en-US])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: GMT+5 [en-US] (Maldives Time [en-US])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: GMT+12 [en-US] (Gilbert Islands Time [en-US])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: UTC [en-US] (Coordinated Universal Time [en-US])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: UTC [en-US] (Coordinated Universal Time [en-US])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: UTC [en-US] (Coordinated Universal Time [en-US])
  </option>
  
    
</select>
`;

exports[`LocaleController should allow updating the time zone options on an uncontrolled select element via events 1`] = `
<select
  data-action="custom:event->w-locale#localizeTimeZoneOptions"
  data-w-locale-server-time-zone-param="Asia/Tokyo"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone: GMT+9 [id-ID] (Waktu Standar Jepang [id-ID])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: GMT [id-ID] (Greenwich Mean Time [id-ID])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: GMT-3 [id-ID] (Waktu Standar Argentina [id-ID])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: CST [id-ID] (Waktu Standar Tengah [id-ID])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: GMT-3 [id-ID] (Waktu Rothera [id-ID])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: GMT+1 [id-ID] (Waktu Standar Eropa Tengah [id-ID])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: GMT+5.45 [id-ID] (Waktu Nepal [id-ID])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: GMT [id-ID] (Waktu Standar Eropa Barat [id-ID])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: GMT+10.30 [id-ID] (Waktu Musim Panas Tengah Australia [id-ID])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: GMT-3 [id-ID] (Waktu Standar Brasil [id-ID])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: AST [id-ID] (Waktu Standar Atlantik [id-ID])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: GMT-3 [id-ID] (Waktu Musim Panas Cile [id-ID])
  </option>
  
      
  <option
    value="EST"
  >
    EST: EST [id-ID] (Waktu Standar Timur [id-ID])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: GMT+7 [id-ID] (GMT+07.00 [id-ID])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: GMT+1 [id-ID] (Waktu Standar Eropa Tengah [id-ID])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: GMT+5 [id-ID] (Waktu Maladewa [id-ID])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: GMT+12 [id-ID] (Waktu Kep. Gilbert [id-ID])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
    
</select>
`;

exports[`LocaleController should correctly apply French spacing rules to localized time zone labels 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  data-w-locale-server-time-zone-param="Europe/Paris"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone : UTC+1 [fr-FR] (heure normale d’Europe centrale [fr-FR])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan : UTC [fr-FR] (heure moyenne de Greenwich [fr-FR])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy : UTC−3 [fr-FR] (heure normale d’Argentine [fr-FR])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox : UTC−6 [fr-FR] (heure normale du centre nord-américain [fr-FR])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera : UTC−3 [fr-FR] (heure de Rothera [fr-FR])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen : UTC+1 [fr-FR] (heure normale d’Europe centrale [fr-FR])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu : UTC+5:45 [fr-FR] (heure du Népal [fr-FR])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary : UTC [fr-FR] (heure normale d’Europe de l’Ouest [fr-FR])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South : UTC+10:30 [fr-FR] (heure d’été du centre de l’Australie [fr-FR])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East : UTC−3 [fr-FR] (heure normale de Brasilia [fr-FR])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic : UTC−4 [fr-FR] (heure normale de l’Atlantique [fr-FR])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental : UTC−3 [fr-FR] (heure d’été du Chili [fr-FR])
  </option>
  
      
  <option
    value="EST"
  >
    EST : UTC−5 [fr-FR] (heure normale de l’Est nord-américain [fr-FR])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7 : UTC+7 [fr-FR] (UTC+07:00 [fr-FR])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels : UTC+1 [fr-FR] (heure normale d’Europe centrale [fr-FR])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT : UTC [fr-FR] (temps universel coordonné [fr-FR])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives : UTC+5 [fr-FR] (heure des Maldives [fr-FR])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa : UTC+12 [fr-FR] (heure des îles Gilbert [fr-FR])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC : UTC [fr-FR] (temps universel coordonné [fr-FR])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal : UTC [fr-FR] (temps universel coordonné [fr-FR])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu : UTC [fr-FR] (temps universel coordonné [fr-FR])
  </option>
  
    
</select>
`;

exports[`LocaleController should localize to the current HTML locale and use the server time zone param for the default 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  data-w-locale-server-time-zone-param="Asia/Jakarta"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone: WIB [id-ID] (Waktu Indonesia Barat [id-ID])
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: GMT [id-ID] (Greenwich Mean Time [id-ID])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: GMT-3 [id-ID] (Waktu Standar Argentina [id-ID])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: CST [id-ID] (Waktu Standar Tengah [id-ID])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: GMT-3 [id-ID] (Waktu Rothera [id-ID])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: GMT+1 [id-ID] (Waktu Standar Eropa Tengah [id-ID])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: GMT+5.45 [id-ID] (Waktu Nepal [id-ID])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: GMT [id-ID] (Waktu Standar Eropa Barat [id-ID])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: GMT+10.30 [id-ID] (Waktu Musim Panas Tengah Australia [id-ID])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: GMT-3 [id-ID] (Waktu Standar Brasil [id-ID])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: AST [id-ID] (Waktu Standar Atlantik [id-ID])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: GMT-3 [id-ID] (Waktu Musim Panas Cile [id-ID])
  </option>
  
      
  <option
    value="EST"
  >
    EST: EST [id-ID] (Waktu Standar Timur [id-ID])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: GMT+7 [id-ID] (GMT+07.00 [id-ID])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: GMT+1 [id-ID] (Waktu Standar Eropa Tengah [id-ID])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: GMT+5 [id-ID] (Waktu Maladewa [id-ID])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: GMT+12 [id-ID] (Waktu Kep. Gilbert [id-ID])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: UTC [id-ID] (Waktu Universal Terkoordinasi [id-ID])
  </option>
  
    
</select>
`;

exports[`LocaleController should skip updating the default option if server time zone is not provided 1`] = `
<select
  data-action="w-init:ready->w-locale#localizeTimeZoneOptions"
  data-controller="w-locale"
  name="locale-current_time_zone"
>
  
      
  <option
    selected=""
    value=""
  >
    Use server time zone
  </option>
  
      
  <option
    value="Africa/Abidjan"
  >
    Africa/Abidjan: غرينتش [ar] (توقيت غرينتش [ar])
  </option>
  
      
  <option
    value="America/Argentina/Jujuy"
  >
    America/Argentina/Jujuy: غرينتش-٣ [ar] (توقيت الأرجنتين الرسمي [ar])
  </option>
  
      
  <option
    value="America/Indiana/Knox"
  >
    America/Indiana/Knox: غرينتش-٦ [ar] (التوقيت الرسمي المركزي لأمريكا الشمالية [ar])
  </option>
  
      
  <option
    value="Antarctica/Rothera"
  >
    Antarctica/Rothera: غرينتش-٣ [ar] (توقيت روثيرا [ar])
  </option>
  
      
  <option
    value="Arctic/Longyearbyen"
  >
    Arctic/Longyearbyen: غرينتش+١ [ar] (توقيت وسط أوروبا الرسمي [ar])
  </option>
  
      
  <option
    value="Asia/Katmandu"
  >
    Asia/Katmandu: غرينتش+٥:٤٥ [ar] (توقيت نيبال [ar])
  </option>
  
      
  <option
    value="Atlantic/Canary"
  >
    Atlantic/Canary: غرينتش [ar] (توقيت غرب أوروبا الرسمي [ar])
  </option>
  
      
  <option
    value="Australia/South"
  >
    Australia/South: غرينتش+١٠:٣٠ [ar] (توقيت وسط أستراليا الصيفي [ar])
  </option>
  
      
  <option
    value="Brazil/East"
  >
    Brazil/East: غرينتش-٣ [ar] (توقيت برازيليا الرسمي [ar])
  </option>
  
      
  <option
    value="Canada/Atlantic"
  >
    Canada/Atlantic: غرينتش-٤ [ar] (التوقيت الرسمي الأطلسي [ar])
  </option>
  
      
  <option
    value="Chile/Continental"
  >
    Chile/Continental: غرينتش-٣ [ar] (توقيت تشيلي الصيفي [ar])
  </option>
  
      
  <option
    value="EST"
  >
    EST: غرينتش-٥ [ar] (التوقيت الرسمي الشرقي لأمريكا الشمالية [ar])
  </option>
  
      
  <option
    value="Etc/GMT-7"
  >
    Etc/GMT-7: غرينتش+٧ [ar] (غرينتش+٠٧:٠٠ [ar])
  </option>
  
      
  <option
    value="Europe/Brussels"
  >
    Europe/Brussels: غرينتش+١ [ar] (توقيت وسط أوروبا الرسمي [ar])
  </option>
  
      
  <option
    value="GMT"
  >
    GMT: UTC [ar] (التوقيت العالمي المنسق [ar])
  </option>
  
      
  <option
    value="Indian/Maldives"
  >
    Indian/Maldives: غرينتش+٥ [ar] (توقيت جزر المالديف [ar])
  </option>
  
      
  <option
    value="Pacific/Tarawa"
  >
    Pacific/Tarawa: غرينتش+١٢ [ar] (توقيت جزر جيلبرت [ar])
  </option>
  
      
  <option
    value="UTC"
  >
    UTC: UTC [ar] (التوقيت العالمي المنسق [ar])
  </option>
  
      
  <option
    value="Universal"
  >
    Universal: UTC [ar] (التوقيت العالمي المنسق [ar])
  </option>
  
      
  <option
    value="Zulu"
  >
    Zulu: UTC [ar] (التوقيت العالمي المنسق [ar])
  </option>
  
    
</select>
`;
